--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ a:hover {
     text-decoration: underline; /* Sublinhado ao passar o mouse sobre o link */
 }
 
-/* Estilo para as imagens */
+ .guerra.png
 img {
     max-width: 100%;
     height: auto;
